--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             "styles": [
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "./node_modules/angular-calendar/css/angular-calendar.css"
+              "./node_modules/angular-calendar/css/angular-calendar.css",
+              "node_modules/sweetalert2/src/sweetalert2.scss",
+              "./node_modules/@syncfusion/ej2-material-theme/styles/material.css"
 
               
             ],
