--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@microsoft/signalr": "^7.0.0",
+    "@syncfusion/ej2-angular-schedule": "^20.3.58",
+    "@syncfusion/ej2-material-theme": "^20.3.60",
     "angular-calendar": "^0.30.1",
     "bootstrap": "^5.2.2",
     "date-fns": "^2.29.3",
     "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
